fix vertical spacing. add comments count. add list of categories.

--- a/css/site.scss
+++ b/css/site.scss
@@ -1,12 +1,44 @@
-.visible-xs-inline {
-	display: none !important;
+---
+# Front matter must be included so that the file will be processed by Jekyll.
+---
+
+// font sizes
+$font-size-base: 	15px;
+$font-size-h1:		floor(($font-size-base * 2.6));
+$font-size-h2:		floor(($font-size-base * 2.15));
+$font-size-h3:		ceil(($font-size-base * 1.7));
+$font-size-h4:		ceil(($font-size-base * 1.25));
+$font-size-h5:		$font-size-base;
+$font-size-h6:		ceil(($font-size-base * 0.85));
+
+// line heights
+$line-height-base: 			1.428571429;
+$line-height-computed:	floor(($font-size-base * $line-height-base));
+
+body {
+	font-size: $font-size-base;
+	line-height: $line-height-base;
 }
 
-@media (max-width: 767px) {
-	.visible-xs-inline {
+h1,h2,h3,h4,h6,h5 { margin-bottom: ($line-height-computed / 2); }
+h1, h2, h3 { margin-top: $line-height-computed; }
+h4, h5, h6 { margin-top: ($line-height-computed / 2); }
+
+h1 { font-size: $font-size-h1; }
+h2 { font-size: $font-size-h2; }
+h3 { font-size: $font-size-h3; }
+h4 { font-size: $font-size-h4; }
+h5 { font-size: $font-size-h5; }
+h6 { font-size: $font-size-h6; }
+
+.visible-xs-inline {
+	display: none !important;
+
+	@media (max-width: 767px) {
 		display: inline !important;
 	}
 }
+
 
 h1,h2,h3,h4,h5,h6 {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -14,11 +46,33 @@ h1,h2,h3,h4,h5,h6 {
 
 .post-title {
 	margin-bottom: 0;
+	font-weight: 700;
+	font-size: floor(($font-size-base * 3.0));
+
+	a { color: inherit; }
+
+	:hover, :focus { text-decoration: none; }
 }
 
 .post-container {
 	font-family: Georgia, Times, 'Times New Roman', serif;
+	margin-bottom: ($line-height-computed * 2.0);
+
+	hr:first-child { margin-bottom: ($line-height-computed * 2.0); }
+
+	//+ .post-container { 
+		//.post-title { margin-top: ($line-height-computed * 2.0); }
+
+		//&:before {
+		//	content: "";
+		//	display: block;
+		//	height: 1px;
+		//	background: black;
+		//}
+	//}
 }
+
+.post-date, .post-tags { margin-right: 1em; }
 
 /*body {
 	padding-top: 60px;
